--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -148,8 +148,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              *
              */
             "resources": {
-                "type": Object,
-                "value": null
+                "type": Array,
+                "value": []
             },
 
             /**
