--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -60,7 +60,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                             <dude-property property-type="{{ renderPoint.point.cgValueType }}"
                                            property-name="{{ renderPoint.point.cgName }}"
                                            property-value="{{ renderPoint.point.cgValue }}"
-                                           property-resources="{{ resources }}"
+                                           property-resources="{{ editor.resources }}"
                                            no-reference>
                             </dude-property>
                         </template>
