Added build in electron demo

--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -181,7 +181,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * @param {CustomEvent} e
              */
             shortcutBuild: function (e) {
-                this.fire("dude-graph-inspector-build", "noop: not yet implemented");
+                this.fire("dude-graph-inspector-build");
                 e && e.detail && e.detail.keyboardEvent && e.detail.keyboardEvent.preventDefault();
             },
 
