--- a/demo/electron/dude-graph-electron.html
+++ b/demo/electron/dude-graph-electron.html
@@ -94,7 +94,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 ipcRenderer.send("dude-graph-save", e.detail);
             },
             _build: function (e) {
-                ipcRenderer.send("dude-graph-build", e.detail);
+                var graphBuilt = new DUDE_GRAPH_BUILDER().build(this.$.editor.get("graph"));
+                ipcRenderer.send("dude-graph-build", graphBuilt);
             },
             _error: function (e) {
                 this.$.error.text = e.detail.error;
