Updated package.json to fix wct tests

--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -11,7 +11,7 @@
 <body>
 <script>
     var graph = new dudeGraph.Graph();
-    var block = new dudeGraph.Block(graph, {}, "Block");
+    var block = new dudeGraph.Block(graph, {});
     graph.addBlock(block);
 </script>
 </body>
