--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -103,9 +103,10 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
          * Autocomplete popup
          */
         #autocomplete {
-            border-radius: 5px;
+            border-radius: 7px;
             padding: 10px;
-            background: rgba(24, 25, 36, 0.8);
+            background: var(--dude-secondary-background-color);
+            border: 2px solid var(--dude-primary-background-color);
         }
     </style>
     <template>
