--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -46,8 +46,46 @@
             expect(block.outputByName("out").cgValueType).to.be.equal("Number");
             expect(block.inputByName("in").cgValueType).to.be.equal("String");
         });
-        test("create basic graph with two blocks connected", function () {
-            // TODO
+        test("create basic graph with two blocks connected and disconnect them", function () {
+            var graph = new dudeGraph.Graph();
+            var block1 = new dudeGraph.Block(graph, {});
+            var outputPoint1 = new dudeGraph.Point(block1, {
+                "cgName": "out",
+                "cgValueType": "Number"
+            }, true, null);
+            block1.addPoint(outputPoint1);
+            graph.addBlock(block1);
+            var block2 = new dudeGraph.Block(graph, {});
+            var inputPoint2 = new dudeGraph.Point(block2, {
+                "cgName": "in",
+                "cgValueType": "Number"
+            }, false, null);
+            block2.addPoint(inputPoint2);
+            graph.addBlock(block2);
+            outputPoint1.connect(inputPoint2);
+            expect(graph.cgConnections).to.have.length(1);
+            expect(outputPoint1.cgConnections).to.have.length(1);
+            expect(inputPoint2.cgConnections).to.have.length(1);
+            expect(outputPoint1.cgConnections[0]).to.be.equal(graph.cgConnections[0]);
+            expect(inputPoint2.cgConnections[0]).to.be.equal(graph.cgConnections[0]);
+            expect(outputPoint1.cgConnections[0]).to.be.equal(inputPoint2.cgConnections[0]);
+            outputPoint1.disconnect(inputPoint2);
+            expect(graph.cgConnections).to.have.length(0);
+            expect(outputPoint1.cgConnections).to.have.length(0);
+            expect(inputPoint2.cgConnections).to.have.length(0);
+            // Test associativity point1.connect(point2) === point2.connect(point1)
+            inputPoint2.connect(outputPoint1);
+            expect(graph.cgConnections).to.have.length(1);
+            expect(outputPoint1.cgConnections).to.have.length(1);
+            expect(inputPoint2.cgConnections).to.have.length(1);
+            expect(outputPoint1.cgConnections[0]).to.be.equal(graph.cgConnections[0]);
+            expect(inputPoint2.cgConnections[0]).to.be.equal(graph.cgConnections[0]);
+            expect(outputPoint1.cgConnections[0]).to.be.equal(inputPoint2.cgConnections[0]);
+            // Test associativity point1.disconnect(point2) === point2.disconnect(point1)
+            inputPoint2.disconnect(outputPoint1);
+            expect(graph.cgConnections).to.have.length(0);
+            expect(outputPoint1.cgConnections).to.have.length(0);
+            expect(inputPoint2.cgConnections).to.have.length(0);
         });
     });
 </script>
