Added dude-toolbar element.

--- a/demo/dude/demo-dude.html
+++ b/demo/dude/demo-dude.html
@@ -6,7 +6,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <link rel="import" href="../../../paper-toast/paper-toast.html">
 <link rel="import" href="../../dude-graph-editor.html">
 <link rel="import" href="../../dude-graph-inspector.html">
-<link rel="import" href="../../dude-graph-toolbar.html">
+<link rel="import" href="../../../dude-toolbar/dude-toolbar.html">
 <script src="demo-dude.js"></script>
 <!--
 `demo-dude` is a Polymer element to wrap a dude-graph demo
@@ -53,7 +53,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                                           on-dude-graph-inspector-save="_save">
                     </dude-graph-inspector>
                 </div>
-                <dude-graph-toolbar id="toolbar"></dude-graph-toolbar>
+                <!--<dude-graph-toolbar id="toolbar"></dude-graph-toolbar>-->
+                <dude-toolbar id="toolbar"></dude-toolbar>
             </div>
         </div>
     </template>
@@ -101,7 +102,64 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             attached: function () {
                 this.$.editor.start();
                 this.$.inspector.start(this.$.editor);
-                this.$.toolbar.start(this.$.editor, this.$.inspector);
+                this.$.toolbar.addCommand({
+                    icon: "fa fa-save",
+                    description: "Save graph",
+                    shortcut: ["ctrl+s", "meta+s"],
+                    action: function (e) { this.$.inspector.shortcutSave(e); }.bind(this)
+                });
+                this.$.toolbar.addCommand({
+                    icon: "fa fa-play",
+                    description: "Build graph",
+                    shortcut: ["ctrl+b", "meta+b"],
+                    action: function (e) { this.$.inspector.shortcutBuild(e); }.bind(this)
+                });
+                this.$.toolbar.addCommand({
+                    icon: "fa fa-trash",
+                    description: "Remove selection",
+                    shortcut: ["del", "meta+backspace"],
+                    action: function (e) { this.$.inspector.shortcutRemoveSelection(e); }.bind(this)
+                });
+                this.$.toolbar.addCommand({
+                    icon: "fa fa-square-o",
+                    description: "Create group",
+                    shortcut: ["ctrl+g", "meta+g"],
+                    action: function (e) { this.$.inspector.shortcutCreateRenderGroup(e); }.bind(this)
+                });
+                this.$.toolbar.addCommand({
+                    icon: "fa fa-compress",
+                    description: "Zoom to fit",
+                    shortcut: ["ctrl+0", "meta+0"],
+                    action: function (e) { this.$.inspector.shortcutZoomToFit(e); }.bind(this)
+                });
+                this.$.toolbar.addCommand({
+                    hidden: true,
+                    icon: "fa fa-compress",
+                    description: "Zoom to selection",
+                    shortcut: ["ctrl+shift+0", "meta+shift+0"],
+                    action: function (e) { this.$.inspector.shortcutZoomToFit(e); }.bind(this)
+                });
+                this.$.toolbar.addCommand({
+                    hidden: true,
+                    icon: "fa fa-circle",
+                    description: "Select blocks",
+                    shortcut: ["ctrl+shift+a", "meta+shift+a"],
+                    action: function (e) { this.$.inspector.shortcutSelectAll(e); }.bind(this)
+                });
+                this.$.toolbar.addCommand({
+                    hidden: true,
+                    icon: "fa fa-circle",
+                    description: "Select groups",
+                    shortcut: ["ctrl+alt+a", "meta+alt+a"],
+                    action: function (e) { this.$.inspector.shortcutSelectAll(e); }.bind(this)
+                });
+                this.$.toolbar.addCommand({
+                    hidden: true,
+                    icon: "fa fa-circle",
+                    description: "Select all",
+                    shortcut: ["ctrl+shift+alt+a", "meta+shift+alt+a"],
+                    action: function (e) { this.$.inspector.shortcutSelectAll(e); }.bind(this)
+                });
                 this.$.editor.load(this.get("graphData"), this.get("rendererData"));
             },
 
