Updated lodash to 4.x

--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -6,7 +6,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <link rel="import" href="../iron-a11y-keys-behavior/iron-a11y-keys-behavior.html">
 <link rel="import" href="../dude-popup/dude-popup.html">
 <link rel="import" href="../dude-hierarchy/dude-hierarchy.html">
-<script src="../lodash/lodash.min.js"></script>
+<script src="../lodash/dist/lodash.min.js"></script>
 <script src="../d3/d3.min.js"></script>
 <script src="../eventEmitter/EventEmitter.min.js"></script>
 <script src="dude-graph.js"></script>
