--- a/panels/dude-graph-edit-group.html
+++ b/panels/dude-graph-edit-group.html
@@ -10,6 +10,14 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 @demo demo/index.html
 -->
 <dom-module id="dude-graph-edit-group">
+    <style>
+        :host {
+            @apply(--layout-vertical);
+            @apply(--layout-flex);
+            overflow: auto;
+            padding: 10px;
+        }
+    </style>
     <template>
         <div>TODO</div>
     </template>
