--- a/panels/dude-graph-edit-group.html
+++ b/panels/dude-graph-edit-group.html
@@ -19,7 +19,11 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         }
     </style>
     <template>
-        <div>TODO</div>
+        <dude-property property-name="Group name"
+                       property-type="String"
+                       property-value="{{ data.nodeName }}"
+                       no-menu>
+        </dude-property>
     </template>
     <script>
         Polymer({
