--- a/demo/dude/demo-dude.html
+++ b/demo/dude/demo-dude.html
@@ -278,6 +278,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * @private
              */
             _loadDefaults: function () {
+                console.log("load defaults!!!");
                 this.set("graphData", DEMO_DUDE_GRAPH_DATA);
                 this.set("rendererData", DEMO_DUDE_RENDERER_DATA);
             },
